Fix logo size on small screen

--- a/src/WebClientApp/src/components/Header/Header.module.scss
+++ b/src/WebClientApp/src/components/Header/Header.module.scss
@@ -29,8 +29,7 @@
 
 @media (max-width: v.$tablet-width) {
   .logo img {
-    max-width: 65px;
-    max-height: 28px;
+    max-height: 44px;
   }
 
   .header {
